Adding workflow_dispatch gh action

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,6 +3,12 @@ on:
   push:
   pull_request:
   repository_dispatch:
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Choose an environment to deploy to: <dev|staging|prod>'
+        required: true
+        default: 'dev'
 jobs:
   deploy:
     runs-on: ubuntu-latest
