--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
 		"preserveConstEnums": true,
 		"moduleResolution": "node",
 		"sourceMap": true,
-		"types": ["@cloudflare/workers-types"]
+		"types": ["@cloudflare/workers-types", "node", "jest"]
 	},
 	"include": ["src"],
 	"exclude": ["node_modules", "dist"]
