--- a/package.json
+++ b/package.json
@@ -4,12 +4,31 @@
 	"scripts": {
 		"deploy": "wrangler publish src/index.ts",
 		"dev": "wrangler dev src/index.ts --local",
-		"test": "vitest",
-		"start-stackblitz": "WRANGLER_SEND_METRICS=false wrangler dev src/index.ts --local"
+		"test": "npx jest",
+		"start-stackblitz": "WRANGLER_SEND_METRICS=false wrangler dev src/index.ts --local",
+		"lint": "npx eslint src",
+		"pretty": "npx prettier --write ."
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^3.0.0",
-		"vitest": "^0.24.5",
+		"@types/aws-lambda": "^8.10.115",
+		"@types/jest": "^29.5.1",
+		"@types/node": "^18.16.4",
+		"@typescript-eslint/eslint-plugin": "^5.52.0",
+		"@typescript-eslint/parser": "^5.52.0",
+		"aws-sdk-client-mock": "^2.0.1",
+		"aws-sdk-client-mock-jest": "^2.1.1",
+		"esbuild": "^0.16.17",
+		"eslint": "^8.34.0",
+		"eslint-config-prettier": "^8.6.0",
+		"jest": "^29.4.2",
+		"prettier": "2.8.4",
+		"ts-jest": "^29.0.5",
+		"ts-node": "^10.9.1",
+		"typescript": "^4.9.5",
 		"wrangler": "^2.1.14"
+	},
+	"dependencies": {
+		"@aws-sdk/client-cloudwatch-logs": "^3.326.0"
 	}
 }
