--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,15 @@
 name = "rpc-proxy"
 main = "./src/index.ts"
 compatibility_date = "2022-05-03"
+
+[env.stagging]
+workers_dev = true
+[env.stagging.vars]
+AWS_REGION = "us-west-2"
+AWS_CLOUDWATCH_LOG_GROUP = "/CloudFlare/RPCProxy/Stagging"
+
+[env.production]
+name = "rpc-proxy"
+[env.production.vars]
+AWS_REGION = "us-west-2"
+AWS_CLOUDWATCH_LOG_GROUP = "/CloudFlare/RPCProxy/Production"
