--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
 	"scripts": {
 		"deploy": "wrangler publish src/index.ts",
 		"dev": "wrangler dev src/index.ts --local",
-		"test": "npx jest",
+		"test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
 		"start-stackblitz": "WRANGLER_SEND_METRICS=false wrangler dev src/index.ts --local",
 		"lint": "npx eslint src",
 		"pretty": "npx prettier --write ."
 	},
 	"devDependencies": {
-		"@cloudflare/workers-types": "^3.0.0",
+		"@babel/core": "^7.21.8",
+		"@babel/preset-env": "^7.21.5",
+		"@cloudflare/workers-types": "^3.19.0",
 		"@types/aws-lambda": "^8.10.115",
 		"@types/jest": "^29.5.1",
 		"@types/node": "^18.16.4",
+		"@types/node-fetch": "^2.6.3",
 		"@typescript-eslint/eslint-plugin": "^5.52.0",
 		"@typescript-eslint/parser": "^5.52.0",
 		"aws-sdk-client-mock": "^2.0.1",
@@ -21,14 +24,17 @@
 		"esbuild": "^0.16.17",
 		"eslint": "^8.34.0",
 		"eslint-config-prettier": "^8.6.0",
-		"jest": "^29.4.2",
+		"fetch-mock": "^9.11.0",
+		"jest-fetch-mock": "^3.0.3",
 		"prettier": "2.8.4",
-		"ts-jest": "^29.0.5",
+		"ts-jest": "^29.1.0",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.5",
 		"wrangler": "^2.1.14"
 	},
 	"dependencies": {
-		"@aws-sdk/client-cloudwatch-logs": "^3.326.0"
+		"-": "^0.0.1",
+		"@aws-sdk/client-cloudwatch-logs": "^3.326.0",
+		"node-fetch": "^2.6.10"
 	}
 }
