--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,10 +16,10 @@ jobs:
         run: npm install
       - name: Run tests
         run: npm test
-  stagging:
+  staging:
     if: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
     env:
-      environment: stagging
+      environment: staging
     runs-on: ubuntu-latest
     needs: tests
     timeout-minutes: 60
