--- a/.prettierrc
+++ b/.prettierrc
@@ -1,19 +1,10 @@
 {
-	"semi": true,
-	"printWidth": 100,
-	"singleQuote": true,
-	"bracketSpacing": true,
-	"insertPragma": false,
-	"requirePragma": false,
-	"jsxSingleQuote": false,
-	"bracketSameLine": false,
-	"embeddedLanguageFormatting": "auto",
-	"htmlWhitespaceSensitivity": "css",
-	"vueIndentScriptAndStyle": true,
-	"quoteProps": "consistent",
-	"proseWrap": "preserve",
-	"trailingComma": "es5",
-	"arrowParens": "avoid",
-	"useTabs": true,
-	"tabWidth": 2
+  "semi": true,
+  "trailingComma": "all",
+  "singleQuote": true,
+  "printWidth": 80,
+  "tabWidth": 2,
+  "arrowParens": "always",
+  "bracketSpacing": true,
+  "useTabs": false
 }
