--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-	"private": true,
-	"version": "0.0.0",
-	"scripts": {
-		"deploy": "wrangler publish src/index.ts",
-		"dev": "wrangler dev src/index.ts --local",
-		"test": "vitest",
-		"start-stackblitz": "WRANGLER_SEND_METRICS=false wrangler dev src/index.ts --local"
-	},
-	"devDependencies": {
-		"@cloudflare/workers-types": "^3.0.0",
-		"vitest": "^0.24.5",
-		"wrangler": "^2.1.14"
-	}
+  "private": true,
+  "version": "0.0.0",
+  "scripts": {
+    "dev": "wrangler dev src/index.ts --local",
+    "deploy:staging": "wrangler deploy --minify src/index.ts --env staging",
+    "deploy:production": "wrangler deploy --minify src/index.ts --env production"
+  },
+  "devDependencies": {
+    "@cloudflare/workers-types": "^4.20240502.0",
+    "wrangler": "^3.47.0"
+  }
 }
