--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
 	"private": true,
 	"version": "0.0.0",
+	"engines": {
+		"node": ">=20.0.0"
+	},
 	"scripts": {
 		"deploy": "wrangler publish src/index.ts",
 		"dev": "wrangler dev src/index.ts --local",
