--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 		"start-stackblitz": "WRANGLER_SEND_METRICS=false wrangler dev src/index.ts --local"
 	},
 	"devDependencies": {
-		"@cloudflare/workers-types": "^3.0.0",
-		"vitest": "^0.24.5",
-		"wrangler": "^2.1.14"
+		"@cloudflare/workers-types": "^4.20240208.0",
+		"vitest": "^1.3.1",
+		"wrangler": "^4.2.0"
 	}
 }
