--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,3 @@
-name = "rpc-proxy" # todo
+name = "rpc-proxy"
 main = "./src/index.ts"
-compatibility_date = "2022-05-03"
+compatibility_date = "2025-09-23"
